# zermelo-cli

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  zermelo.rs
