[package]
name = "zermelo-cli"
version = "0.2.0"
edition = "2021"
description = "A cli to get your schedule of the current day built with rust"
license = "BSD-3-Clause"
repository = "https://github.com/IkBenOlie5/zermelo-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.9", features = ["json", "blocking"]}
serde = {version = "1.0.136", features = ["derive"]}
chrono = "0.4.19"
colored = "2.0.0"